<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DeskSMS</string>
    
    <string name="description">DeskSMS forwards your SMS to your Google Talk and/or Gmail. And reply back to respond via text!</string>
    
    <string name="signin_success">You have successfully signed in!</string>
    <string name="signin_failure">Login failed. Please verify your internet connection and try again. Logging in with a Google Apps email address may not work. If the error persists, please send a log to the developer.</string>
    
    <string name="login_with_google">Login with Google Account</string>
    <string name="requesting_permissions">DeskSMS will now ask you for permission to use your Google Account authentication for the purposes of push notifications and registration with our server. DeskSMS will not have access to your passwords or personal data.</string>
    <string name="permission_request">Permissions Request</string>
    
    <string name="send_xmpp">Connect to Google Talk</string>
    <string name="send_email">Connect to Gmail</string>
    
    <string name="setting_up_push">Setting up push notifications...</string>
    <string name="retrieving_authentication">Retrieving Google authentication tokens...</string>
    <string name="registering_with_server">Registering with push server...</string>
    
    <string name="current_account">Current Account: %s</string>
    
    <string name="forwarded">%s SMS sent to your Desktop</string>
    <string name="proxied">%s SMS sent by your Desktop</string>
    
    <string name="not_logged_in">Please log in with your Google Account to use DeskSMS.</string>
    
    <string name="test_message">Send Test Message</string>
    <string name="test_message_info">Press OK to send a SMS to yourself. You should see the SMS arrive in your Messaging application as usual. You should also receive an email and optionally a Google Talk message as well!</string>
    <string name="test_message_content">This is a test message from DeskSMS!</string>
    
    <string name="number_retrieval_error">Unable to retrieve your phone number. Please use your Messaging application to manually send yourself a text message to test DeskSMS.</string>
    
    <string name="msg_app_detected">The application %s was found installed. If you do not receive a text message, please verify that that it has not disabled SMS notifications in the application\'s settings.</string>
    <string name="handcent">Handcent</string>
    <string name="gosms">GoSMS</string>
    
    <string name="missed_call_from">Missed call from %s.</string>
    <string name="missed_call_at">Missed call at %s.</string>
    <string name="sms_received">SMS Received from %s</string>
    
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="google_talk">Google Talk</string>
    <string name="gmail">Gmail</string>
    
    <string name="troubleshooting">Troubleshooting</string>

    <string name="accounts">Accounts</string>
    
    <string name="widget_name">DeskSMS Widget</string>
    
    <string name="updating_settings">Updating server settings...</string>
    <string name="updating_settings_error">There was an error communicating with the server. Please check your connection.</string>
    <string name="disable_notifications">Disable SMS Notifications</string>
    <string name="disable_notifications_summary">Disable SMS Notification to other applications. Do not use the notification disabler in GoSMS or Handcent; enable this instead.</string>
    
    <string name="sync_sms">Sync SMS</string>
    <string name="sync_sms_summary">Sync your SMS history to the DeskSMS server. This will enable you to use the DeskSMS web interface and view your message history online.</string>
    
    <string name="contacts">Contacts</string>
    <string name="add_desksms_contact_info">Merge DeskSMS Contacts</string>
    <string name="add_desksms_contact_info_summary">Add DeskSMS email and IM addresses to your contact list. This will allow you to initate an SMS to someone via email or IM.</string>
    <string name="remove_desksms_contact_info">Remove DeskSMS Contacts</string>
    <string name="please_wait_contact_list">Please wait while your contact list is updated...</string>

	<string name="sync_calls">Sync Calls</string>
	<string name="sync_calls_summary">Sync your Call history to the DeskSMS server for online viewing.</string>
	
	<string name="web">Browser and Extensions</string>

	<string name="testing_push">Testing push notifications...</string>
	<string name="push_failed">You have successfully signed in!\n\nWarning: Push notifications were set up successfully, but the test push notification failed. There may be issues when sending messages via DeskSMS.</string>
	
	<string name="buy_desksms">Buy DeskSMS</string>
	
	<string name="retrieving_status">Retrieving Account Status...</string>
	
	<string name="paypal">PayPal</string>
	<string name="android_market_inapp">Android Market In-App</string>
	<string name="payment_options">Payment Options</string>
	<string name="account_status">Account Status</string>
	<string name="days_left">%s days left</string>
	<string name="status_error">Unable to retrieve account status! Please try again later.</string>
	<string name="desksms_one_year_license">DeskSMS One Year License</string>
	<string name="purchase_thanks">Thanks! Your purchase will be processed on the DeskSMS servers shortly.</string>
	
	<string name="switch_account">Switch Account</string>

    <string name="mms_received">MMS Received from %s</string>
    
    <string name="redeem_code">Redeem Code</string>

    <string name="plugin_name">DeskSMS</string>

    <string name="disable_notifications_summary2">Disables the stock Messaging app\'s notifications while DeskSMS is forwarding.</string>
    <string name="adjust_sms_date">Adjust SMS Date</string>
    <string name="adjust_sms_date_summary">Adjust the date on incoming text messages. This workaround is necessary to fix date bugs on some Motorola phones.</string>
    <string name="adjust_hour">%s hour</string>
    <string name="adjust_hours">%s hours</string>
    <string name="disabled">Disabled</string>
    
    <string name="signin_complete">The links to the DeskSMS Website, Chrome extensions, and usage tips has been sent to your email address.</string>
    
    <string name="authentification_notification">DeskSMS was unable to log into your account. Please click to reauthenticate.</string>
</resources>
