<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center" android:padding="15dp" android:textSize="12sp">
		<TextView android:text="@string/description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:gravity="center" />
	</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center"
		android:padding="10dp">
		<Button android:id="@+id/login" android:text="@string/login_with_google"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center" />
		<TextView android:id="@+id/current_account"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center" />
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center" android:padding="10dp">

		<CheckBox android:id="@+id/send_xmpp" android:text="@string/send_xmpp"
			android:checked="true" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<CheckBox android:id="@+id/send_email" android:text="@string/send_email"
			android:checked="true" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>


	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center" android:padding="10dp">

		<TextView android:id="@+id/forwarded"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView android:id="@+id/proxied"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center"
		android:padding="10dp">
		<Button android:id="@+id/test_message" android:text="@string/test_message"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center" />
	</LinearLayout>

</LinearLayout>
